Bug 106953 - FILEOPEN: RTF: First line indent is ignored
Summary: FILEOPEN: RTF: First line indent is ignored
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.4.0 target:5.3.4
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2017-04-04 15:32 UTC by Xisco Faulí
Modified: 2023-02-06 20:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-04-04 15:32:47 UTC
Steps to reproduce:
1. Open attachment 99795 [details] from bug 78506

Expected behaviour: The first line in both paragraphs should be indented to the right.

Reproduced in

Version: 5.4.0.0.alpha0+
Build ID: fcad02149f3a9964f36522d97faaf303fc321788
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-04-03_06:21:10
Locale: es-ES (es_ES); Calc: group
Comment 1 Xisco Faulí 2017-04-04 15:33:46 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2017-01-03 07:49:43 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2017-01-03 10:56:29 (GMT)
commit a9e029ace41562e28e9242d63230ad1ca275f5d3 (patch)
tree 605fee980e467c8a5896bdf5053fd7422865091a
parent c9c5c94771f22919ec82351b3b9b3096af96a508 (diff)
tdf#104744 RTF import: fix unexpected zero para left margin wrt style dedup
See commit 1be0a3fa9ebb22b607c54b47739d4467acfed259 (n#825305:
writerfilter RTF import: override style properties like Word,
2014-06-17) for the details on style override in RTF.

Here the problem was that we added an unneeded "reset to 0" property, the
opposite situation that commit 657c6cc3acec0528209a8584b838cd6de581c437
(tdf#104228 RTF import: fix override of style left/right para margin,
2016-12-13) was fixing (there a "reset to 0" was missing).

bisected with bibisect-linux-64-5.4

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2017-05-16 08:10:57 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f528f9499bd91b700c549575e88fa102cfffede9

tdf#106953 RTF import: fix missing paragraph left margin

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2017-05-25 19:46:07 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0022ae02cfea1c5d69d9f4fedeeeb7a30cc4184b&h=libreoffice-5-3

tdf#106953 RTF import: fix missing paragraph left margin

It will be available in 5.3.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2017-08-30 19:21:04 UTC
Verified in

Version: 6.0.0.0.alpha0+
Build ID: 78960ad06faca055a6d97afbc764c902d5d07f6f
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-08-30_06:31:19
Locale: es-ES (es_ES); Calc: group